adapt BSC RPC and add blob extra field grant allowance
