# models/b_s_c_blob_tx_sidecar.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// BSCBlobTxSidecar b s c blob tx sidecar
+//
+// swagger:model BSCBlobTxSidecar
+type BSCBlobTxSidecar struct {
+
+	// blob sidecar
+	BlobSidecar *BSCBlobSidecar `json:"blobSidecar,omitempty"`
+
+	// block hash
+	BlockHash string `json:"blockHash,omitempty"`
+
+	// block number
+	BlockNumber string `json:"blockNumber,omitempty"`
+
+	// tx hash
+	TxHash string `json:"txHash,omitempty"`
+
+	// tx index
+	TxIndex string `json:"txIndex,omitempty"`
+}
+
+// Validate validates this b s c blob tx sidecar
+func (m *BSCBlobTxSidecar) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateBlobSidecar(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *BSCBlobTxSidecar) validateBlobSidecar(formats strfmt.Registry) error {
+	if swag.IsZero(m.BlobSidecar) { // not required
+		return nil
+	}
+
+	if m.BlobSidecar != nil {
+		if err := m.BlobSidecar.Validate(formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("blobSidecar")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("blobSidecar")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// ContextValidate validate this b s c blob tx sidecar based on the context it is used
+func (m *BSCBlobTxSidecar) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateBlobSidecar(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *BSCBlobTxSidecar) contextValidateBlobSidecar(ctx context.Context, formats strfmt.Registry) error {
+
+	if m.BlobSidecar != nil {
+		if err := m.BlobSidecar.ContextValidate(ctx, formats); err != nil {
+			if ve, ok := err.(*errors.Validation); ok {
+				return ve.ValidateName("blobSidecar")
+			} else if ce, ok := err.(*errors.CompositeError); ok {
+				return ce.ValidateName("blobSidecar")
+			}
+			return err
+		}
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *BSCBlobTxSidecar) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *BSCBlobTxSidecar) UnmarshalBinary(b []byte) error {
+	var res BSCBlobTxSidecar
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
