# models/rpc_error.go
@@ -1,0 +1,55 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// RPCError RPC error
+//
+// swagger:model RPCError
+type RPCError struct {
+
+	// RPC error code
+	// Example: -32602
+	Code int64 `json:"code"`
+
+	// Error message
+	// Example: Invalid params
+	Message string `json:"message"`
+}
+
+// Validate validates this RPC error
+func (m *RPCError) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this RPC error based on context it is used
+func (m *RPCError) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RPCError) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RPCError) UnmarshalBinary(b []byte) error {
+	var res RPCError
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
