# swagger.yaml
@@ -4,12 +4,12 @@ info:
   title: Blob Hub Service API
   description: API for handling blob query in the Blob Hub.
 host: 'blob-hub'
-basePath: "/eth/v1"
+#basePath: "/eth/v1"
 schemes:
   - http
 
 paths:
-  /beacon/blob_sidecars/{block_id}:
+  /eth/v1/beacon/blob_sidecars/{block_id}:
     get:
       tags:
         - "blob"
@@ -43,6 +43,30 @@ paths:
           description: 'blob not found'
           schema:
             $ref: "#/definitions/Error"
+        "500":
+          description: 'internal server error'
+          schema:
+            $ref: "#/definitions/Error"
+
+  /:
+    post:
+      tags:
+        - "blob"
+      summary: "Get BSC blob sidecars by block num"
+      operationId: "getBSCBlobSidecarsByBlockNum"
+      produces:
+        - "application/json"
+      parameters:
+        - in: "body"
+          name: "body"
+          required: true
+          schema:
+            $ref: "#/definitions/RPCRequest"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/RPCResponse"
         "500":
           description: 'internal server error'
           schema:
@@ -100,6 +124,92 @@ definitions:
                 type: string
               body_root:
                 type: string
+      tx_index:
+        type: integer
+        format: int64
+        x-omitempty: true
+      tx_hash:
+        type: string
+
+  RPCRequest:
+    type: object
+    properties:
+      jsonrpc:
+        type: string
+        example: "2.0"
+      method:
+        type: string
+        example: "eth_getBlobSidecars"
+      params:
+        type: array
+        items:
+          type: string
+        example: ["0x1", true]
+      id:
+        type: integer
+        example: 1
+
+  RPCResponse:
+    type: object
+    properties:
+      jsonrpc:
+        type: string
+        example: "2.0"
+      result:
+        type: array
+        items:
+          $ref: "#/definitions/BSCBlobTxSidecar"
+      id:
+        type: integer
+        example: 1
+      error:
+        $ref: "#/definitions/RPCError"
+
+
+  BSCBlobSidecar:
+    type: object
+    properties:
+      blobs:
+        type: array
+        items:
+          type: string
+      commitments:
+        type: array
+        items:
+          type: string
+      proofs:
+        type: array
+        items:
+          type: "string"
+
+  BSCBlobTxSidecar:
+    type: object
+    properties:
+      blobSidecar:
+        $ref: "#/definitions/BSCBlobSidecar"
+      blockNumber:
+        type: string
+      blockHash:
+        type: string
+      txIndex:
+        type: string
+      txHash:
+        type: string
+
+  RPCError:
+    type: object
+    properties:
+      code:
+        x-omitempty: false
+        type: integer
+        format: int64
+        description: "RPC error code"
+        example: -32602
+      message:
+        x-omitempty: false
+        type: string
+        description: "Error message"
+        example: "Invalid params"
 
   Error:
     type: object
